--- a/dci.html
+++ b/dci.html
@@ -60,7 +60,7 @@
       <br>
       in the summer of 2019 i set aside all other activities and
       free time to devote my summer to working 14 hours every day for
-      around 80 days towards this one show. This activity is
+      around 80 days towards this show. This activity is
       comparable to high school marching band because of the rigorous
       practice and performance schedules, but the athleticism required
       for dci is similar to that of highly intensive sports. I
