--- a/general.html
+++ b/general.html
@@ -43,28 +43,44 @@
 <body>
   <hr style="height:135pt; visibility:hidden;" />
   <div class="title">
+    <a> Virginia Tech</a>
+  </div>
+  <hr style="height:35pt; visibility:hidden;" />
+  <div class="container">
+    <center>
+      august 2021 - present
+      <br>
+      blacksburg, VA
+      <br><br>
+      I am currently a student at virginia tech who was accepted in
+      2021 with multiple scholarships. Computer engineering has stood
+      out to me as a final engineering major but I am yet to decide.
+      I am currently apart of the rocksat-x rocketry club, the trail
+      and ultrarunning club, and the fly fishing club.
+    </center>
+  </div>
+
+</body>
+
+<body>
+  <hr style="height:100pt; visibility:hidden;" />
+  <div class="title">
     <a> LAKE TRAVIS HIGH SCHOOL</a>
   </div>
   <hr style="height:35pt; visibility:hidden;" />
   <div class="container">
     <center>
-      august 2017 - PRESENT
+      august 2017 - may 2021
       <br>
       AUSTIN, TX
       <br><br>
-      I am a student at Lake Travis High School and am currently
-      enrolled in multiple honors and advanced placement classes.
-      In my high school career i have been AB honor roll with a 97
-      weighted average. For all of high school, I have been in the
-      marching band and in the symphonic division of concert band.
-      I joined jazz band Junior year and plan to do it senior year.
-      I am also on the robotics competition team (on which
-      we have won competitions and competed in regional and state
-      competitions), and I am taking classes from UT Austin and
-      austin community college. I plan to major in mechanical
-      engineering or computer science. I am looking forward to
-      going to college soon in the state of texas eventually
-      pursuing a masters degree.
+      I graduated with a 97 overall gpa in the top of my class.
+      I mainly participated in marching band throughout high school,
+      while also participating in leadership and jazz as an
+      upperclassmen. I was also apart of the robotics competition
+      team, who went on to win awards at multiple VEX events. I
+      also took classes at austin community college and the university
+      of texas in my high school career through dual enrollment.
     </center>
   </div>
   <hr style="height:50pt; visibility:hidden;" />
