--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
     <h3>About Me:</h3>
     <div class="small-text">
       <a>
-        Hi! I'm Luke Taylor. I am currently in the junior class of Lake Travis
-        High School, and I plan to graduate in the spring semester of 2021.
-        Some of my passions include music, particularly classical euphonium
-        and jazz, computer science, and robotics. I also have a deep
-        commitment to service, and have accumulated over 500 service hours. I
-        have also received the US congressional Gold medal in 2020. In
-        college, I plan to study computer science within the state of Texas
-        and continue to explore my love for music as well.
+        I am currently a student attending virginia tech in pursuit of
+        a computer engineering degree. In high school, I graduated
+        with a 97 grade point average with honors including: the US
+        congressional gold medal, 500+ service hours, and leadership
+        in band. For all of high school, I was a part of the marching
+        band and in the symphonic division of concert band. I was also
+        in jazz band junior and senior year. I was a member of the
+        robotics team for junior and senior year, where we competed
+        in vex competitions and advanced to the state competition.
+        I plan to graduate with a computer engineering degree in may 2025.
       </a>
     </div>
   </div>
