--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 
   <center>
     <form method="get" action="fullbot.iam">
-      <button class="button" type="submit">OPEN FULL BOT</button>
+      <button class="button" type="submit">DOWNLOAD FULL BOT</button>
     </form>
   </center>
   <hr style="height:50pt; visibility:hidden;" />
@@ -70,9 +70,9 @@
 
 
   <center>
-    <form method="get" action="Website.zip">
+    <a href="https://github.com/luket1521/lukeweb" onclick="window.open(this.href); return false;">
       <button class="button" type="submit">THIS WEBSITE</button>
-    </form>
+      </form>
   </center>
 
 
