--- a/band.html
+++ b/band.html
@@ -45,34 +45,36 @@
   <hr style="height:135pt; visibility:hidden;" />
   <div class="container" style="float:right;margin:auto;margin-right:5%;">
     <center>
-      hello, my name is luke taylor and i have been a part of the lake
-      travis high school band program all four years of high school.
-      I play the Euphonium in concert season, the baritone during the marching
-      season, and I play the bass trombone in the jazz band. While
-      i have participated in the program, the band has performed
-      in many different places, including St. Louis, New York, and many
-      other local events.
+      i was a part of the lake travis high school band program for all
+      four years of high school. I used to play the Euphonium in concert
+      season, the baritone during the marching season, and the bass
+      trombone in jazz band. While i participated in the program,
+      the band performed around the country, including St. Louis,
+      New York, and many other local events.
     </center>
   </div>
   <img src="https://i.postimg.cc/qRX05vKm/fullsizeoutput-69.jpg" alt="freshman me :/" style="width:30%;height:79.5%;float:left;margin-left:5%;margin-top:auto;">
   <img src="https://i.postimg.cc/L4nWr6rC/IMG-3332.jpg" alt="section pic" style="width:43%;height:50%;float:none;margin-left:12.5%;margin-top:35px;">
   <div class="container" style="margin-top:35px;margin-bottom:35px;width">
     <center>
-      i am currently a member of the Lake Travis High School band. For me,
-      band includes marching season, concert season, and jazz band. I
-      have marched in 3 of our productions, entitled Junkestra,
-      Project Stravinsky, and Eternal. Links to each can be found
-      below. During concert season, I have performed works by maslanka,
-      grainger, many others and also prepared solo and chamber ensembles. In
-      jazz band we have a wide selection of music, ranging from classic
-      jazz to modern funk. In all areas of band we consider it our
-      privilege to bring more music and artistry to our community
-      through performance and hard work.
+      For me, band used to include marching season, concert season, and
+      jazz band. This would take hours out of every day and total up
+      to 20-30 hours some weeks. I have marched in 4 of our productions,
+      entitled Junkestra, Project Stravinsky, Eternal, and March Fourth.
+      Links to each can be found below. During concert season, I have
+      performed works by maslanka, grainger, many others and also
+      prepared solo and chamber ensembles every year. In jazz band we
+      have a wide selection of music, ranging from classic jazz to
+      modern funk. The ensemble would perform for the community at
+      events in nursing homes to concert halls. In all areas of band
+      we consider it our privilege to bring more music and artistry
+      to our community through performance and hard work.
     </center>
   </div>
   <div class="container" style="margin-top:35px;margin-bottom:35px;">
     <center>
-      Here are the productions/ensembles i have been apart in the recent years. all of the The video credits go to Wes rowe.
+      Here are the productions/ensembles i have been apart throughout
+      all of high school. all of the The video credits go to Wes rowe.
     </center>
   </div>
   <center>
@@ -81,6 +83,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/jylWNGPqbLE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/isdDTODWiG8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/DZZw9yzbkwQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/u-oLTyEmQQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/2wf_AsEMpE0?start=90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </center>
 
